# reddit-game-jam

./: .gitignore  CMakeLists.txt  README
include/pd/: aabb.hpp  animation.hpp  box2d_helpers.hpp  camera.hpp  collisions.hpp  color.hpp  config.hpp  console.hpp  drawtools.hpp  enemy.hpp  entity.hpp  font.hpp  game.hpp  game_session.hpp  image.hpp  kinetic_enemy.hpp  lexical_cast.hpp  main_menu.hpp  map.hpp  math.hpp  path.hpp  pd.hpp  player.hpp  resource_base.hpp  resource_manager.hpp  rnd.hpp  screen.hpp  sprite.hpp  texture.hpp  thermal_enemy.hpp  unordered_map.hpp  utils.hpp  xml.hpp
libs/: .gitignore
libs/Box2D/: CMakeLists.txt
resources/config/: blocks.xml  camera.xml  console.xml  kinetic_enemy.xml  player.xml  world.xml
resources/fonts/: console.fnt  simple.fnt
resources/maps/: demo.map  level01.tmx  testing.map  testlevel.map
scripts/: convert-tmx.py
src/: animation.cpp  camera.cpp  color.cpp  config.cpp  console.cpp  drawtools.cpp  enemy.cpp  entity.cpp  font.cpp  game.cpp  game_session.cpp  image.cpp  kinetic_enemy.cpp  main.cpp  main_menu.cpp  map.cpp  path.cpp  player.cpp  resource_manager.cpp  rnd.cpp  screen.cpp  sprite.cpp  texture.cpp  thermal_enemy.cpp  utils.cpp
